@@ -1,5 +1,8 @@
 2007-04-26  Tatsuya BIZENN  <bizenn@arthub.net>
 
+	* Fix: src/kahua/elem.scm, src/kahua/server.scm
+	  Fix wrong format of entity reference node(&, &:, &/).
+
 	* Change: src/kahua/server.scm
 	  Integrate a and a/cont, form and form/cont, frame and frame/cont.
 	  Change define-element syntax and add backward compatibility.
